--- a/Code/Code/Views/web.config
+++ b/Code/Code/Views/web.config
@@ -16,7 +16,7 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="KTXSV" />
+        <add namespace="Code" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
