--- a/Source Code/KTXSV/Web.config
+++ b/Source Code/KTXSV/Web.config
@@ -66,7 +66,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="KTXSVEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Lam\LAMSQL;initial catalog=KTXSV;persist security info=True;user id=duylam;password=sa;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="KTXSVEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KEAN;initial catalog=KTXSV;persist security info=True;user id=sa;password=88888888;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.codedom>
     <compilers>
