--- a/Source Code/KTXSV/packages.config
+++ b/Source Code/KTXSV/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.Configuration.ConfigurationBuilders.Base" version="3.0.0" targetFramework="net481" />
   <package id="Microsoft.Configuration.ConfigurationBuilders.UserSecrets" version="3.0.0" targetFramework="net481" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net481" />
+  <package id="Microsoft.Net.Compilers" version="4.0.1" targetFramework="net481" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net481" />
   <package id="Modernizr" version="2.8.3" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
