--- a/Source Code/KTXSV/KTXSV.csproj
+++ b/Source Code/KTXSV/KTXSV.csproj
@@ -134,7 +134,8 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\Admin\AdminController.cs" />
+    <Compile Include="Controllers\Admin\AdminSupportController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HoTroController.cs" />
     <Compile Include="Controllers\PhongController.cs" />
@@ -261,17 +262,11 @@
     <Content Include="Views\SinhVien\ChinhSuaThongTin.cshtml" />
     <Content Include="Views\ThanhToan\HoaDon.cshtml" />
     <Content Include="Views\ThongBao\ThongBao.cshtml" />
-<<<<<<< HEAD
-=======
-    <Content Include="Views\HoTro\YeuCauHoTro.cshtml" />
-    <Content Include="Views\HoTro\LichSu.cshtml" />
->>>>>>> eec902b (Cập nhật AccountController, Views và HomeController)
     <Content Include="Views\StudentFiles\Index.cshtml" />
     <Content Include="Views\Phong\HoSo.cshtml" />
     <Content Include="Views\ThanhToan\TestHD.cshtml" />
     <Content Include="Views\Admin\PendingRegistrations.cshtml" />
     <Content Include="Views\Shared\_AdminLayout.cshtml" />
-<<<<<<< HEAD
     <Content Include="Views\TaiKhoan\Index.cshtml" />
     <Content Include="Views\TaiKhoan\LoginAdmin.cshtml" />
     <Content Include="Views\TaiKhoan\LoginStudent.cshtml" />
@@ -280,13 +275,15 @@
     <Content Include="Views\SupportRequests\Delete.cshtml" />
     <Content Include="Views\SupportRequests\Details.cshtml" />
     <Content Include="Views\SupportRequests\Index.cshtml" />
-=======
     <Content Include="Views\Account\Index.cshtml" />
     <Content Include="Views\Account\LoginAdmin.cshtml" />
     <Content Include="Views\Account\LoginStudent.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Account\Logout.cshtml" />
->>>>>>> eec902b (Cập nhật AccountController, Views và HomeController)
+    <Content Include="Views\AdminSupport\Index.cshtml" />
+    <Content Include="Views\AdminSupport\Details.cshtml" />
+    <Content Include="Views\AdminSupport\UpdateStatus.cshtml" />
+    <Content Include="Views\AdminSupport\Reply.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
