--- a/Source Code/KTXSV/Web.config
+++ b/Source Code/KTXSV/Web.config
@@ -66,7 +66,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="KTXSVEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;                          provider=System.Data.SqlClient;                          provider connection string=&quot;                            Data Source=LAM\LAMSQL;                            Initial Catalog=KTXSV;                            User ID=duylam;                            Password=sa;                            Connect Timeout=30;                            Encrypt=True;                            TrustServerCertificate=True;                          &quot;" providerName="System.Data.EntityClient" />
+    <add name="KTXSVEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;                          provider=System.Data.SqlClient;                          provider connection string=&quot;                            Data Source=KEAN;                            Initial Catalog=KTXSV;                            User ID=sa;                            Password=88888888;                            Connect Timeout=30;                            Encrypt=True;                            TrustServerCertificate=True;                          &quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.codedom>
     <compilers>
