--- a/Source Code/KTXSV/KTXSV.csproj
+++ b/Source Code/KTXSV/KTXSV.csproj
@@ -204,6 +204,9 @@
     <Compile Include="Models\SupportRequest.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\sysdiagram.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\User.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -317,7 +320,6 @@
     <Content Include="Views\AdminRooms\Create.cshtml" />
     <Content Include="Views\AdminRooms\Edit.cshtml" />
     <Content Include="Views\AdminRooms\Delete.cshtml" />
-    <Content Include="Views\ManageStudents\Active.cshtml" />
     <Content Include="Views\AdminRooms\TransferRoom.cshtml" />
     <Content Include="Views\SinhVien\DanhSachSinhVien.cshtml" />
     <Content Include="Views\SinhVien\ThemSinhVienMoi.cshtml" />
