--- a/Source Code/KTXSV/Web.config
+++ b/Source Code/KTXSV/Web.config
@@ -65,10 +65,23 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="KTXSVEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;                          provider=System.Data.SqlClient;                          provider connection string=&quot;                            Data Source=LAM\LAMSQL;                            Initial Catalog=KTXSV;                            User ID=duylam;                            Password=sa;                            Connect Timeout=30;                            Encrypt=True;                            TrustServerCertificate=True;                          &quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
-  <system.codedom>
+<connectionStrings>
+  <add name="KTXSVEntities"
+       providerName="System.Data.EntityClient"
+       connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;
+                         provider=System.Data.SqlClient;
+                         provider connection string=&quot;
+                             Data Source=KEAN;
+                             Initial Catalog=KTXSV;
+                             Persist Security Info=True;
+                             User ID=sa;
+                             Password=88888888;
+                             TrustServerCertificate=True;
+                             MultipleActiveResultSets=True;
+                         &quot;" />
+</connectionStrings>
+
+	<system.codedom>
     <compilers>
       <compiler extension=".cs" language="c#;cs;csharp" warningLevel="4" compilerOptions="/langversion:7.3 /nowarn:1659;1699;1701;612;618" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
       <compiler extension=".vb" language="vb;vbs;visualbasic;vbscript" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
