--- a/Source Code/KTXSV/packages.config
+++ b/Source Code/KTXSV/packages.config
@@ -4,6 +4,9 @@
   <package id="BCrypt.Net-Next" version="4.0.3" targetFramework="net48" />
   <package id="bootstrap" version="5.2.3" targetFramework="net481" />
   <package id="EntityFramework" version="6.5.1" targetFramework="net481" />
+  <package id="Hangfire" version="1.8.22" targetFramework="net48" />
+  <package id="Hangfire.Core" version="1.8.22" targetFramework="net48" />
+  <package id="Hangfire.SqlServer" version="1.8.22" targetFramework="net48" />
   <package id="jQuery" version="3.7.0" targetFramework="net481" />
   <package id="jQuery.Validation" version="1.19.5" targetFramework="net481" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net481" />
@@ -15,9 +18,12 @@
   <package id="Microsoft.Configuration.ConfigurationBuilders.UserSecrets" version="3.0.0" targetFramework="net481" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net481" />
   <package id="Microsoft.Net.Compilers" version="4.0.1" targetFramework="net481" developmentDependency="true" />
+  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net48" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net481" />
   <package id="Modernizr" version="2.8.3" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
+  <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
