--- a/Source Code/KTXSV/KTXSV.csproj
+++ b/Source Code/KTXSV/KTXSV.csproj
@@ -356,6 +356,7 @@
     <Content Include="Views\Dashboard\Index.cshtml" />
     <Content Include="Views\AdminRooms\CurrentContracts.cshtml" />
     <Content Include="Views\ThongBao\ViewNotification.cshtml" />
+    <Content Include="Views\Admin\Notifications.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
