sửa nhiều lắm aaaaa

--- a/Source Code/KTXSV/Web.config
+++ b/Source Code/KTXSV/Web.config
@@ -67,9 +67,7 @@
   </entityFramework>
 <connectionStrings>
   <add name="KTXSVEntities" providerName="System.Data.EntityClient" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;                          provider=System.Data.SqlClient;                          provider connection string=&quot;                              Data Source=KEAN;                              Initial Catalog=KTXSV;                              Persist Security Info=True;                              User ID=sa;                              Password=88888888;                              TrustServerCertificate=True;                              MultipleActiveResultSets=True;                          &quot;" />
-	<add name="HangfireConnection"
-		   connectionString="Server=KEAN;Database=KTXSV;User Id=sa;Password=88888888;"
-		   providerName="System.Data.SqlClient" />
+	<add name="HangfireConnection" connectionString="Server=KEAN;Database=KTXSV;User Id=sa;Password=88888888;" providerName="System.Data.SqlClient" />
 </connectionStrings>
 
 	<system.codedom>
