--- a/Source Code/KTXSV/KTXSV.csproj
+++ b/Source Code/KTXSV/KTXSV.csproj
@@ -81,6 +81,11 @@
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
+    <Reference Include="QRCoder, Version=1.7.0.0, Culture=neutral, PublicKeyToken=c4ed5b9ae8358a28, processorArchitecture=MSIL">
+      <HintPath>..\packages\QRCoder.1.7.0\lib\net40\QRCoder.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
@@ -159,6 +164,7 @@
       <Private>True</Private>
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -347,8 +353,7 @@
     <Content Include="Views\ManageStudents\Create.cshtml" />
     <Content Include="Views\PaymentAdmin\Create.cshtml" />
     <Content Include="Views\PaymentAdmin\Delete.cshtml" />
-    <Content Include="Views\PaymentAdmin\Details.cshtml" />
-    <Content Include="Views\PaymentAdmin\Edit.cshtml" />
+    <Content Include="Views\PaymentAdmin\DetailsEdit.cshtml" />
     <Content Include="Views\PaymentAdmin\Index.cshtml" />
     <Content Include="Views\AdminRooms\Renew.cshtml" />
     <Content Include="Views\Phong\GiaHanPhong.cshtml" />
@@ -357,6 +362,7 @@
     <Content Include="Views\AdminRooms\CurrentContracts.cshtml" />
     <Content Include="Views\ThongBao\ViewNotification.cshtml" />
     <Content Include="Views\Admin\Notifications.cshtml" />
+    <Content Include="Views\ThanhToan\QRPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
