--- a/Source Code/KTXSV/packages.config
+++ b/Source Code/KTXSV/packages.config
@@ -24,6 +24,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
   <package id="Owin" version="1.0" targetFramework="net48" />
+  <package id="QRCoder" version="1.7.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
